--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <title>Laika</title>
 </head>
 
-<body>
+<body style="background-color: #111;">
     <header class="site-header sticky">
         <nav class="navbar navbar-expand-lg fixed-top ">
             <a class="navbar-brand" href="#" style="font-size: 28px;font-style: italic;">Laika
@@ -88,6 +88,9 @@
                     </div>
                     <div class="col-md-5 col-sm-12 order-md-1">
                         <h2 style="font-size: 55px;font-weight: bold;">Laika</h2>
+                        <p style="font-size:16px;padding:0 0 10px">The First Dog in Space 
+                            <br>
+                            Honoring the Pioneer of Space Exploration</p>
                         <div class="buttons-wrapper">
                             <a class="btn btn-primary" style="background-color:#ffffff;" href="#"  data-toggle="modal" data-target="#contact">Buy Now</a>
                             <a class="btn btn-secondary"  style="background-color:#ffffff;color:#000" href="https://docs.zoci.io/" target="_blank">Chart</a>
