--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </li>
                 </ul>
                 <div class="nav-right">
-                    <a class="btn btn-primary" href="chartlink" target="_blank">Chart</a>
+                    <a class="btn btn-primary" href="https://www.dextools.io/app/en/ether/pair-explorer/0xf9614e706f6696156ce33dfe09d92ddfb22628b4?t=1722630593324" target="_blank">Chart</a>
                 </div>
             </div>
         </nav>
@@ -92,8 +92,8 @@
                             <br>
                             Honoring the Pioneer of Space Exploration</p>
                         <div class="buttons-wrapper">
-                            <a class="btn btn-primary" style="background-color:#ffffff;" href="#"  data-toggle="modal" data-target="#contact">Buy Now</a>
-                            <a class="btn btn-secondary"  style="background-color:#ffffff;color:#000" href="chartlink" target="_blank">Chart</a>
+                            <a class="btn btn-primary" style="background-color:#ffffff;" href="https://app.uniswap.org/explore/tokens/ethereum/0x11111140902e45643bde07c64fe850dea43fc612#">Buy Now</a>
+                            <a class="btn btn-secondary"  style="background-color:#ffffff;color:#000" href="https://www.dextools.io/app/en/ether/pair-explorer/0xf9614e706f6696156ce33dfe09d92ddfb22628b4?t=1722630593324" target="_blank">Chart</a>
                         </div>
 
                     </div>
@@ -111,7 +111,7 @@
                         <h2>About Us</h2>
                         <p style="font-size:15px;color:#fff;margin:25px 0">Laika was a Soviet space dog who became the first animal to orbit the Earth. Launched aboard Sputnik 2 on November 3, 1957, Laika's mission was a key milestone in space exploration, paving the way for human spaceflight. Born as a stray on the streets of Moscow, Laika was selected for her calm temperament and small size. Her mission provided crucial data on the effects of space travel on living organisms, despite the fact that she did not survive the journey. Laika's sacrifice is remembered as a poignant symbol of the early days of space exploration and the extraordinary lengths taken to push the boundaries of human knowledge.</p>
                         <div class="buttons-wrapper">
-                            <a class="btn btn-primary" style="background-color:#ffffff;" href="#"  data-toggle="modal" data-target="#contact">Comminuty</a>
+                            <a class="btn btn-primary" style="background-color:#ffffff;" href="https://t.me/LaikaDogETH" >Comminuty</a>
                             <!-- <a class="btn btn-secondary"  style="background-color:#ffffff;color:#000" href="/" target="_blank">Docs</a> -->
                         </div>
 
