--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                         <p style="font-size:16px;padding:0 0 10px">The First Dog in Space 
                             <br>
                             Honoring the Pioneer of Space Exploration</p>
+                        <p style="font-size:16px;padding:0 0 10px">CA : 0x11111140902E45643BDE07C64fE850dea43fC612</p>
                         <div class="buttons-wrapper">
                             <a class="btn btn-primary" style="background-color:#ffffff;" href="https://app.uniswap.org/explore/tokens/ethereum/0x11111140902e45643bde07c64fe850dea43fc612#">Buy Now</a>
                             <a class="btn btn-secondary"  style="background-color:#ffffff;color:#000" href="https://www.dextools.io/app/en/ether/pair-explorer/0xf9614e706f6696156ce33dfe09d92ddfb22628b4?t=1722630593324" target="_blank">Chart</a>
